Fix height issue on mobile

--- a/src/styles/login/AuthPage.scss
+++ b/src/styles/login/AuthPage.scss
@@ -5,7 +5,7 @@
 
 .auth-container {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background: #445663;
     a {
         color: white;
